# pathfinder_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
lib/pathfinder/include/pathfinder/: io.h  mathutil.h  trajectory.h
lib/pathfinder/include/pathfinder/modifiers/: swerve.h
msg/: Path.msg  PathSegment.msg
pathfinder/include/: pathfinder.h
pathfinder/include/pathfinder/: fit.h  lib.h  spline.h  structs.h
pathfinder/include/pathfinder/followers/: distance.h  encoder.h
pathfinder/include/pathfinder/modifiers/: tank.h
scripts/: path_to_waypoints.py  publish_waypoints.py
src/: node.cpp
