<?xml version="1.0"?>
<package format="2">
    <name>pathfinder_ros</name>

    <version>1.0.0</version>

    <description>ROS package for generating motion-profiled spline path trajectories using Pathfinder</description>

    <maintainer email="anish_oss@anishsinghani.com">asinghani</maintainer>

    <license>MIT</license>

    <url type="website">https://github.com/asinghani/pathfinder_ros</url>

    <author email="anish_oss@anishsinghani.com">asinghani</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

</package>
